runtime/pavex_macros/tests/error_handler/fail/custom_id_generation.stderr
error: Mark the error reference input with `#[px(error_ref)]`.
       Pavex can't automatically identify it if your error handler has two or more input parameters.
 --> tests/error_handler/fail/custom_id_generation.rs:4:23
  |
4 | pub fn invalid_handler(_a: &str, _b: u64) -> pavex::Response {
  |                       ^^^^^^^^^^^^^^^^^^^
